--- a/about.css
+++ b/about.css
@@ -1,5 +1,5 @@
 .about {
-    background: url(../image/boxe/fond.jpg) center center no-repeat;
+    background: url(fond.jpg) center center no-repeat;
     background-size: cover;
     position: relative;
 }
