--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 #hero {
-    background: url(../image/boxe/24.jpg);
+    background: url(24.jpg);
     width: 100%;
     height: auto;
     background-color: rgba(39, 37, 34, 0.8);
