--- a/personnel.css
+++ b/personnel.css
@@ -1,5 +1,5 @@
 .membres {
-    background: url("../image/boxe/fond.jpg") center center no-repeat;
+    background: url("fond.jpg") center center no-repeat;
     background-size: cover;
     padding: 60px 0;
     position: relative;
